--- a/input.in
+++ b/input.in
@@ -1,20 +1,28 @@
 /control/verbose 0
 /tracking/verbose 1
 #
-/gun/particle mu-
-/gun/energy 1. GeV
-/gun/position 121. 5. 0. cm
-#/gun/direction 0. -1. 0.
+#/gun/particle geantino
+#/gun/energy 1. GeV
+#/gun/position 0. 0. 90. cm
+#/gun/direction 0. 0. -1.
 #/gun/position 0. 20. 60. cm # For wcdMute Detector.
 #/gun/position 0. 150. 45. cm # For wcdMute Detector.
 #/gun/momentumAmp 0.1 GeV
 #
 #/gun/momentum 1.0 0. 0. MeV
 /wcd/phys/verbose 0
+
+/spectrum/readfile pao-fluxSec-geo-2006-d347-h0.out.shw.bz2
+/spectrum/iniposZ 50. cm
+/spectrum/radArea 0.3 m # No more than 45 m
+
+/detect/radio 45. cm
+/detect/hight 120. cm # No more than 4.5 m
+
 #
-#/gun/testVal 500. MeV
+#/gun/testVal 500. MeV 
 
 #/control/cout/ignoreThreadsExcept 1
 #/control/cout/setCoutFile coutFileName
 
-/run/beamOn 1
+/run/beamOn 2
